syntax = "proto3";
package raft;

message VoteRequest {
    int64 term = 1;
    string candidateId = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
}

message VoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}